--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,44 @@
-apply plugin: 'jetty'
-apply plugin: 'ear'
-
-repositories {
-    mavenCentral()
-    mavenLocal()
-    jcenter()
-    maven { url 'http://repository.jboss.org/nexus/content/groups/public' }
+buildscript {
+    repositories {
+        mavenCentral()
+    }
 }
 
-dependencies {
-    compile group: 'javax.ejb', name: 'javax.ejb-api', version: '3.2'
-    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.2'
-    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.2'
+allprojects {
+    apply plugin: "idea"
+
+    version = "1.0"
+    ext {
+        appName = "GroupCalendar"
+    }
+
+    repositories {
+        mavenCentral()
+        mavenLocal()
+        jcenter()
+        maven { url 'http://repository.jboss.org/nexus/content/groups/public' }
+    }
+}
+
+project(":ejbs") {
+    apply plugin: "java"
+
+    dependencies {
+        compile group: 'javax.ejb', name: 'javax.ejb-api', version: '3.2'
+        compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.2'
+        compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.2'
+    }
+}
+
+project(":war") {
+    apply plugin: "war"
+}
+
+project(":ear") {
+    apply plugin: "java"
+    apply plugin: "ear"
+
+    dependencies {
+        earlib project(":ejbs")
+    }
 }
