--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,7 @@ project(":rest") {
         compile project(':ejbs')
         compile group: 'javax.ejb', name: 'javax.ejb-api', version: '3.2'
         compile group: 'javax.ws.rs', name: 'jsr311-api', version: '0.11'
+        compile group: 'org.jboss.resteasy', name: 'resteasy-jaxrs', version: '3.0.11.Final'
         compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.2'
         compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.2'
     }
@@ -52,13 +53,10 @@ project(":ear") {
     apply plugin: "ear"
 
     dependencies {
-        //def nonTransitive = {transitive = false}
         deploy project(":ejbs")
         deploy project(":rest")
+        deploy project(":war")
         earlib project(path:":ejbs", configuration:"compile")
-        earlib project(path:":rest", configuration:"compile")//, nonTransitive
-        //add('earlib', project(':rest')) {
-        //    exlude project(':ejbs')
-        //}
+        earlib project(path:":rest", configuration:"compile")
     }
 }
