--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,6 @@ project(":rest") {
     apply plugin: "java"
 
     dependencies {
-
         compile project(':ejbs')
         compile group: 'javax.ejb', name: 'javax.ejb-api', version: '3.2'
         compile group: 'javax.ws.rs', name: 'jsr311-api', version: '0.11'
@@ -46,6 +45,15 @@ project(":rest") {
 
 project(":war") {
     apply plugin: "war"
+
+    dependencies {
+        compile project(':ejbs')
+        compile group: 'javax.ejb', name: 'javax.ejb-api', version: '3.2'
+        compile group: 'javax.ws.rs', name: 'jsr311-api', version: '0.11'
+        compile group: 'org.jboss.resteasy', name: 'resteasy-jaxrs', version: '3.0.11.Final'
+        compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.2'
+        compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.2'
+    }
 }
 
 project(":ear") {
@@ -54,10 +62,11 @@ project(":ear") {
 
     dependencies {
         deploy project(":ejbs")
-        deploy project(":rest")
+        //deploy project(":rest")
         deploy project(path:":war", configuration:'archives')
         earlib project(path:":ejbs", configuration:"compile")
-        earlib(project(path:":rest", configuration:"compile")) {
+        //earlib(project(path:":rest", configuration:"compile")) {
+        earlib(project(path:":war", configuration:"compile")) {
             exclude module: 'ejbs'
         }
     }
