--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,8 @@ project(":ejbs") {
         compile group: 'javax.ejb', name: 'javax.ejb-api', version: '3.2'
         compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.2'
         compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.2'
+        compile group: 'javax.persistence', name: 'persistence-api', version: '1.0.2'
+        //compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.18'
     }
 }
 
