--- a/build.gradle
+++ b/build.gradle
@@ -50,6 +50,7 @@ project(":war") {
         providedCompile group: 'org.jboss.resteasy', name: 'resteasy-jaxrs', version: '3.0.11.Final'
         compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.2'
         compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.2'
+        compile group: 'com.google.code.gson', name: 'gson', version: '2.3.1'
     }
 }
 
