--- a/build.gradle
+++ b/build.gradle
@@ -67,6 +67,7 @@ project(":ear") {
         testCompile group: 'commons-httpclient', name: 'commons-httpclient', version: '3.1'
         testCompile group: 'org.jboss.resteasy', name: 'resteasy-jaxrs', version: '3.0.11.Final'
         testCompile group: 'com.google.code.gson', name: 'gson', version: '2.3.1'
+        testCompile group: 'commons-codec', name: 'commons-codec', version: '1.10'
     }
 
     test {
